--- a/about.html
+++ b/about.html
@@ -79,10 +79,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>About</h2>
+                        <h2>O meni</h2>
                         <div class="breadcrumb__links">
                             <a href="#">Home</a>
-                            <span>About</span>
+                            <span>O meni</span>
                         </div>
                     </div>
                 </div>
@@ -451,13 +451,13 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        <p class="footer__copyright__text">Copyright &copy;
+                        <!-- <p class="footer__copyright__text">Copyright &copy;
                             <script>
                                 document.write(new Date().getFullYear());
                             </script>
                             All rights reserved | This template is made with <i class="fa fa-heart-o"
                                 aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                        </p>
+                        </p> -->
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                 </div>
