adding css to be more responsive

--- a/svadbe.html
+++ b/svadbe.html
@@ -401,7 +401,7 @@
                         <a href="#" class="arrow__pagination left__arrow"><span class="arrow_left"></span> Prev</a>
                         <a href="#" class="number__pagination">1</a>
                         <a href="#" class="number__pagination">2</a>
-                        <a href="./portfolio.html" class="arrow__pagination right__arrow">Next <span class="arrow_right"></span></a>
+                        <a href="#" class="arrow__pagination right__arrow">Next <span class="arrow_right"></span></a>
                     </div>
                 </div>
             </div>
