--- a/about.html
+++ b/about.html
@@ -392,7 +392,7 @@
                             <a href="#"><img src="img/logo.png" alt=""></a>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6">
+                    <!-- <div class="col-lg-6 col-md-6">
                         <div class="footer__top__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
@@ -400,7 +400,7 @@
                             <a href="#"><i class="fa fa-instagram"></i></a>
                             <a href="#"><i class="fa fa-youtube-play"></i></a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <!-- <div class="footer__option">
