comment out unused code

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,13 +58,13 @@
                                 <li><a href="./contact.html">Kontakt</a></li>
                             </ul>
                         </nav>
-                        <div class="header__nav__social">
+                        <!-- <div class="header__nav__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-dribbble"></i></a>
                             <a href="#"><i class="fa fa-instagram"></i></a>
                             <a href="#"><i class="fa fa-youtube-play"></i></a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
     <!-- Portfolio Section Begin -->
     <section class="portfolio spad">
        <div class="breadcrumb-option spad set-bg" data-setbg="img/breadcrumb-bg.jpg">
-            <div class="row justify-content-evenly portfolio__gallery">  <div class="col-lg-3 col-md-6 p-2 col-sm-6 mix digital-marketing">
+            <div class="row justify-content-center portfolio__gallery">  <div class="col-lg-3 col-md-6 p-2 col-sm-6 mix digital-marketing">
                             <a href="https://live.staticflickr.com/65535/53884852191_8d54b3f8ac_b.jpg"><img src="https://live.staticflickr.com/65535/53884852191_8d54b3f8ac_w.jpg"></a>
                             
                         <!-- <div class="portfolio__item__text">
