--- a/contact.html
+++ b/contact.html
@@ -58,13 +58,13 @@
                                 <li class="active"><a href="./contact.html">Kontakt</a></li>
                             </ul>
                         </nav>
-                        <div class="header__nav__social">
+                        <!-- <div class="header__nav__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-dribbble"></i></a>
                             <a href="#"><i class="fa fa-instagram"></i></a>
                             <a href="#"><i class="fa fa-youtube-play"></i></a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
